[gd_scene load_steps=9 format=2]

[ext_resource path="res://Asset/Shapes/New Project.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=2]
[ext_resource path="res://Asset/Shapes/New Project (1).png" type="Texture" id=3]
[ext_resource path="res://Scripts/Swipe.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 18.8837

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
radius = 21.344

[node name="Ball" type="KinematicBody2D"]
pause_mode = 1
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Collision_Ball" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite_Ball" type="Sprite" parent="."]
modulate = Color( 1, 0.984314, 0, 1 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
show_behind_parent = true
margin_left = -1022.17
margin_top = -669.647
margin_right = 1014.83
margin_bottom = 697.353
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control"]
position = Vector2( -596.522, -585.237 )
scale = Vector2( 1.62407, 1828.61 )
normal = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Control"]
visible = false
modulate = Color( 1, 1, 1, 0.54902 )
position = Vector2( 1022.66, 669.681 )
rotation = 0.0174533
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
offset = Vector2( -360.491, 57.5809 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 1
scale = Vector2( 1.624, 5 )
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true
smoothing_speed = 9.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 0.964706, 1, 0, 1 )
emitting = false
amount = 80
one_shot = true
spread = 180.0
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity_random = 1.0
linear_accel = 100.0
radial_accel = 100.0
damping = 100.0
angle = 720.0
scale_amount = 25.0
color = Color( 1, 0.917647, 0, 1 )
hue_variation = 1.0

[connection signal="pressed" from="Control/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Control/TouchScreenButton" to="Control" method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Control/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="released" from="Control/TouchScreenButton" to="Control" method="_on_TouchScreenButton_released"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
